# lau-error-correcting-codes

./: AGENT.md  Cargo.toml  README.md
src/: convolutional.rs  crc.rs  cyclic.rs  hamming.rs  lib.rs  linear.rs  parity.rs  reed_solomon.rs  shannon.rs
